corrects minor typo

--- a/src/Intercom.scss
+++ b/src/Intercom.scss
@@ -15,7 +15,7 @@
 
 .IntercomOpen {
   // copied over directly from the styles
-  // intercom injects inside on the iframe
+  // intercom injects inside the iframe
   width: 100%;
   max-width: 451px;
 
