--- a/src/Intercom.scss
+++ b/src/Intercom.scss
@@ -3,10 +3,15 @@
   bottom: 0;
   right: 0;
   z-index: 999;
-  width: 90px;
-  height: 90px;
+  width: 0;
+  height: 0;
   background: transparent;
   border: none;
+}
+
+.Intercom-HasLauncher {
+  width: 90px;
+  height: 90px;
 }
 
 .IntercomAnimating {
