--- a/src/Intercom.scss
+++ b/src/Intercom.scss
@@ -3,10 +3,15 @@
   bottom: 0;
   right: 0;
   z-index: 999;
-  width: 90px;
-  height: 90px;
+  width: 0;
+  height: 0;
   background: transparent;
   border: none;
+}
+
+.IntercomHasLauncher {
+  width: 90px;
+  height: 90px;
 }
 
 .IntercomAnimating {
@@ -15,7 +20,7 @@
 
 .IntercomOpen {
   // copied over directly from the styles
-  // intercom injects inside on the iframe
+  // intercom injects inside the iframe
   width: 100%;
   max-width: 451px;
 
